Fix: Tagline in manifest file exceeds character limit
Changed the tagline to be 63 characters long from 83

--- a/source/blender_manifest.toml
+++ b/source/blender_manifest.toml
@@ -3,7 +3,7 @@ schema_version = "1.0.0"
 id = "better_add_menu"
 name = "Better Add Menu"
 version = "1.0.0"
-tagline = "UI improvements and quality-of-life tweaks for the 'Add Node' menu for Node Editors"
+tagline = "Quality-of-life tweaks for the 'Add Node' menu in node editors"
 maintainer = "Quackers"
 type = "add-on"
 tags = ["Node", "User Interface"]
